2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.15.5 ===

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* gio/gio-docs.xml:
	* gio/gio-sections.txt:
	* gio/overview.xml: Documentation additions

2008-02-10  Philip Withnall  <pwithnall@svn.gnome.org>

	* glib/tmpl/modules.sgml: Improve the documentation for
	the G_MODULE_EXPORT macro. (#514470)

2008-02-09  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/i18n.sgml: Improve the documentation for the
	N_() macro.  (#514053, Tommi Vainikainen)

2008-01-28  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.4 ===

2008-01-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/trees-nary.sgml: Move docs inline

2008-01-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/macros_misc.sgml: Document G_GNUC_(PRETTY)_FUNCTION
	as deprecated.

2008-01-24  Matthias Clasen  <mclasen@redhat.com>

	* gio/migration.xml: Some more

2008-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gio/migration.xml: Add something on trash handling
	and some very sketchy information on gnome_vfs_xfer

2008-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gio/overview.xml: Document environment
	variables used by GIO.

2008-01-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.3 ===

2008-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Additions

2008-01-14  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.2 ===

2008-01-11  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/*: Hook up gtestutils docs.
	
2008-01-08  Alexander Larsson  <alexl@redhat.com>

        * gio/gio-docs.xml:
        * gio/migrating.xml:
	Remove GDirectoryMonitor refernces

008-01-07  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.1 ===

2008-01-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt:
	* gio/gio-sections.txt: Update to api changes

2008-01-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/building.sgml: Document new dependencies and 